frontend/test/should_fail/pattern_009.grg
using patt;

pattern Foo modify(a:A, b:B)
{
	n:Node;
	
	modify {
		x2 --> n <-- b;
	}	
}

rule r {
	foo:Foo();

	modify {
		a:A;
		b:B; 
		foo(a, b);
	}
}
